Criando pagina de Cadastro e arrumando algumas classes

--- a/cadastro.html
+++ b/cadastro.html
@@ -12,15 +12,18 @@
 
     <form action="">
         <fieldset class="field-login">
-            <h1 class="title login">Login</h1>
+            <h1 class="title register">Cadastre-se</h1>
             <label for="user">Usuário</label>
             <input type="text" class="input user" id="user" name="user">
+            <label for="email">Senha</label>
+            <input type="email" class="input email" id="email" name="email">
             <label for="pass">Senha</label>
             <input type="password" class="input pass" id="pass" name="pass">
             <div class="div-separate">
-                <button class=" btn log" type="submit">Login</button>
-                <a href="cadastro.html" class="btn rgstr">Cadastre-se</a>
-                <a href="#" class="link-recoverpass">Esqueci minha senha</a>
+                <button class=" btn log" type="submit">Cadastre-se</button>
+                <p class="paragrafo">Já possui cadastro? <a href="index.html" class="link-recoverpass">Faca login</a>
+                </p>
+
             </div>
         </fieldset>
 
