Arrumando cursor-pointer do Esqueci minha senha

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="div-separate">
                 <button class=" btn log" type="submit">Login</button>
                 <a href="cadastro.html" class="btn rgstr">Cadastre-se</a>
-                <a href="#" class="link-recoverpass">Esqueci minha senha</a>
+                <div class="div-1"><a href="#" class="link-recoverpass">Esqueci minha senha</a></div>
             </div>
         </fieldset>
 
